# openclaw-eval

./: .gitignore  CHANGELOG.md  CODEX_TASK.md  LICENSE  README.md  README_CN.md  USER_JOURNEY.md  USER_JOURNEY_CN.md  cases.yaml  pyproject.toml  quickstart_cases.json  quickstart_report.json  review.csv  suggestion.txt  test_cases.yaml  test_edd.sh  test_judge.py  test_judge_integration.py  test_report.json  verify_task3.sh
.github/workflows/: ci.yml  release.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  JUDGE_COMMAND.md  JUDGE_COMMAND_EN.md
plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
plugin/src/: cases.ts  index.ts  report.ts  runner.ts  session.ts  workspace.ts
plugin/src/commands/: run.ts  save.ts
src/openclaw_edd/: __init__.py  __main__.py  cli.py  edd.py  eval.py  indexer.py  judge.py  models.py  patterns.py  quickstart_cases.json  session.py  session_reader.py  store.py  tracer.py  watcher.py
tests/: test_cli.py  test_eval.py  test_models.py  test_patterns.py  test_plan_alignment.py  test_retries.py  test_session_metadata.py  test_trace.py
tests/fixtures/: sample_cases.json  sample_cases.yaml  sample_events.json  sample_golden_v03.jsonl
