[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-edd"
version = "0.2.0"
description = "Evaluation-Driven Development toolkit for OpenClaw agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Allison Walker"},
]
keywords = ["openclaw", "evaluation", "edd", "agent", "testing", "sre"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyYAML>=6.0",
    "anthropic>=0.18.0",
]

[project.optional-dependencies]
judge = ["anthropic>=0.18.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[project.scripts]
openclaw-edd = "openclaw_edd.cli:main"

[project.urls]
Homepage = "https://github.com/Belyenochi/openclaw-edd"
Repository = "https://github.com/Belyenochi/openclaw-edd"
Issues = "https://github.com/Belyenochi/openclaw-edd/issues"
Changelog = "https://github.com/Belyenochi/openclaw-edd/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openclaw_edd = ["quickstart_cases.json", "py.typed"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
